<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B53416A"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#264AD9"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/button"
        style="@style/PlayButton"
        android:textColor="#98FF98"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/LocalPVP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button_PvC"
        style="@style/PlayButton"
        android:textColor="#98FF98"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/PvC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button_exit"
        style="@style/ExitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/Exit"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_PvC"
        app:layout_constraintStart_toStartOf="@+id/button_PvC"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.895" />

    <EditText
        android:id="@+id/p2Name"
        android:layout_width="207dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/p2Name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="@+id/button_PvC"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1Name"
        app:layout_constraintVertical_bias="0.565" />

    <EditText
        android:id="@+id/p1Name"
        android:layout_width="212dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="@+id/button_PvC"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/button_PvC"
        app:layout_constraintTop_toBottomOf="@+id/button_PvC"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-11"
        android:rotationX="14"
        android:rotationY="-7"
        android:text="@string/GB"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>