<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B53416A"
    tools:context=".Game">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"

        android:gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/CurrentTurn"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout

        android:id="@+id/gameGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="@+id/WinScreen"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.341">

        <Button
            android:id="@+id/button_0_0"
            style="@style/GridElement"
            android:layout_row="0"
            android:layout_column="0" />

        <Button
            android:id="@+id/button_0_1"
            style="@style/GridElement"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:id="@+id/button_0_2"
            style="@style/GridElement"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:id="@+id/button_1_0"
            style="@style/GridElement"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:id="@+id/button_1_1"
            style="@style/GridElement"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:id="@+id/button_1_2"
            style="@style/GridElement"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:id="@+id/button_2_0"
            style="@style/GridElement"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:id="@+id/button_2_1"
            style="@style/GridElement"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:id="@+id/button_2_2"
            style="@style/GridElement"
            android:layout_row="2"
            android:layout_column="2" />

    </GridLayout>

    <TextView
        android:id="@+id/currPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/gameGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/WinScreen"
        android:layout_width="354dp"
        android:layout_height="202dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.941"
        tools:visibility="visible">

        <Button
            android:id="@+id/backFromWinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back_to_main_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/winPlayerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/backFromWinButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>